--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import "styles/banking-mobile";
 @import "styles/switch";
 @import "styles/modal";
+@import "styles/spinner";
 
 *, *::before, *::after {
   box-sizing : border-box;
