--- a/src/app/modules/banking/components/add-payee/add-payee.component.html
+++ b/src/app/modules/banking/components/add-payee/add-payee.component.html
@@ -3,12 +3,12 @@
 <form (ngSubmit)="addPayee()" [formGroup]="addPayeeForm">
     <section class="bt_section_info">
         <!--Payee name-->
-        <div class="details">
+        <div class="form-group">
             <label for="payeeName">Payee Name</label>
             <input formControlName="payeeName" id="payeeName" type="text"
                    [class.error-input]="isPayeeNameInvalid()"
             >
-            <div *ngIf="isPayeeNameInvalid()" class="bt_inline_error">
+            <div *ngIf="isPayeeNameInvalid()" class="bt_inline_error inline-error">
                 <span *ngIf="payeeName.hasError('required')">
                     Payee Name is required
                 </span>
@@ -19,11 +19,33 @@
         </div>
 
         <!--IFSC code-->
-        <div class="details">
+        <div class="form-group">
             <label for="code">IFSC Code</label>
             <input (blur)="fetchBankDetails()" formControlName="code" id="code" type="text"
                 [class.error-input]="isCodeInvalid()">
-            <div *ngIf="isCodeInvalid()" class="bt_inline_error">
+            <div class="info" *ngIf="bankDetails">
+                <div class="details">
+                    <strong>Bank Name</strong>
+                    <span>{{ bankDetails.BANK }}</span>
+                </div>
+                <div class="details">
+                    <strong>Branch</strong>
+                    <span>{{ bankDetails.BRANCH }}</span>
+                </div>
+                <div class="details">
+                    <strong>City</strong>
+                    <span>{{ bankDetails.CITY }}</span>
+                </div>
+                <div class="details">
+                    <strong>District</strong>
+                    <span>{{ bankDetails.DISTRICT }}</span>
+                </div>
+                <div class="details">
+                    <strong>State</strong>
+                    <span>{{ bankDetails.STATE }}</span>
+                </div>
+            </div>
+            <div *ngIf="isCodeInvalid()" class="bt_inline_error inline-error">
                 <span *ngIf="code.hasError('required')">
                     IFSC code is required
                 </span>
@@ -34,12 +56,12 @@
         </div>
 
         <!--Payee Account Number-->
-        <div class="details">
+        <div class="form-group">
             <label for="payeeAccountNumber">Payee Account Number</label>
             <input formControlName="payeeAccountNumber" id="payeeAccountNumber" type="text"
                 [class.error-input]="isPayeeAccountNumberInvalid()">
             <div *ngIf="isPayeeAccountNumberInvalid()"
-                 class="bt_inline_error">
+                 class="bt_inline_error inline-error">
                 <span *ngIf="payeeAccountNumber.hasError('required')">
                     Payee Account Number is required
                 </span>
