--- a/src/app/modules/banking/components/header/header.component.html
+++ b/src/app/modules/banking/components/header/header.component.html
@@ -20,6 +20,8 @@
              src="https://randomuser.me/api/portraits/men/43.jpg">
     </div>
     <div>
-        <a href="" routerLink="login">Log Out</a>
+        <a href="" routerLink="login" title="Log out">
+            <app-svg-icon [svgIconId]="'sign-out'"></app-svg-icon>
+        </a>
     </div>
 </div>
