--- a/src/app/modules/banking/components/login/login.component.html
+++ b/src/app/modules/banking/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
     <div class="login-image-container">
-        <img alt="login image" src="assets/img/login-bg.jpg"/>
+        <img alt="login image" src="assets/img/login.jpg"/>
     </div>
     <div class="login-form-wrapper">
         <div class="login-header">
@@ -12,22 +12,25 @@
             <form [formGroup]="loginForm" action="">
                 <div class="form-group-vertical">
                     <label for="id">Customer ID</label>
-                    <input formControlName="customerId" id="id" type="text"/>
+                    <input formControlName="customerId" id="id" type="text" placeholder="Enter your 8 digit Customer ID"/>
                     <div *ngIf="customerId.invalid && (customerId.touched || customerId.dirty)"
                          class="bt_inline_error inline-vertical">
                         <span *ngIf="customerId.hasError('required')">Customer ID is required</span>
                         <span *ngIf="customerId.hasError('pattern')">Customer ID can only contain numbers</span>
+                        <span *ngIf="customerId.hasError('minlength') || customerId.hasError('maxlength')">
+                            Customer ID should be 8 digits
+                        </span>
                     </div>
                 </div>
                 <div class="form-group-vertical">
                     <label for="password">Password</label>
-                    <input formControlName="password" id="password" type="password"/>
+                    <input formControlName="password" id="password" type="password" placeholder="Password"/>
                     <div *ngIf="password.invalid && (password.touched || password.dirty)"
                          class="bt_inline_error inline-vertical">
                         <span *ngIf="password.hasError('required')">Password is required</span>
                     </div>
                 </div>
-                <div class="btn-container js-center">
+                <div class="btn-container jc-center">
                     <button (click)="login()" class="button btn-primary">Login</button>
                 </div>
             </form>
