--- a/src/styles/_banking-mobile.scss
+++ b/src/styles/_banking-mobile.scss
@@ -74,35 +74,52 @@
 	  align-items    : flex-start;
 	}
 
+	table, thead, tbody, th, td, tr {
+	  display : block;
+	}
+
+	table {
+	  /* Hide table headers (but not display: none;, for accessibility) */
+	  thead tr {
+		position : absolute;
+		top      : -9999px;
+		left     : -9999px;
+	  }
+
+	  tr {
+		margin : 0 0 1rem 0;
+	  }
+
+	  tr:nth-child(odd) {
+		background : #E0E0E0;
+	  }
+
+	  td {
+		/* Behave  like a "row" */
+		border        : none;
+		position      : relative;
+		padding  : 0.5em;
+	  }
+
+	  td:before {
+		/* Now like a table header */
+		position      : absolute;
+		/* Top/left values mimic padding */
+		top           : 0;
+		left          : 6px;
+		width         : 45%;
+		padding-right : 10px;
+		white-space   : nowrap;
+	  }
+	}
+
+
 	.transaction-history {
 	  display : none;
 	}
 
 	.bt-mobile {
 	  display : block;
-
-	  table {
-		table-layout    : fixed;
-		border-collapse : collapse;
-		width           : 100%;
-	  }
-
-	  th {
-		text-align : left;
-
-		&:last-child {
-		  text-align : right;
-		}
-	  }
-
-	  td {
-		padding       : 18px 0;
-		border-bottom : 1px solid #E0E0E0;
-
-		&:last-child {
-		  text-align : right;
-		}
-	  }
 	}
 
 	.bt_radio {
@@ -117,7 +134,7 @@
 	  }
 	}
 
-	.details {
+	.details, .form-group {
 	  grid-template-rows    : repeat(2, 1fr);
 	  grid-template-columns : none;
 	  grid-gap              : 6px;
