--- a/src/app/modules/shared/alerts/alerts.component.html
+++ b/src/app/modules/shared/alerts/alerts.component.html
@@ -1,6 +1,7 @@
-<div class="bt_banner"
+<div class="bt_banner" id="alert"
      [class.bt_success_banner]="alertDetails.isSuccessMessage"
-     [class.bt_error_banner]="alertDetails.isErrorMessage">
+     [class.bt_error_banner]="alertDetails.isErrorMessage"
+    *ngIf="isShowAlert()">
     <div class="alert">
         <app-svg-icon [svgIconId]="'check-circle'" *ngIf="alertDetails.isSuccessMessage"></app-svg-icon>
         <app-svg-icon [svgIconId]="'alert'" *ngIf="alertDetails.isErrorMessage"></app-svg-icon>
