--- a/src/app/modules/banking/components/common/modal/modal.component.html
+++ b/src/app/modules/banking/components/common/modal/modal.component.html
@@ -16,7 +16,7 @@
             <ng-content></ng-content>
         </div>
         <div class="modal-footer">
-            <div class="button-container" [class.flex-right]="applyClass()" (click)="closeModal($event)">
+            <div class="button-container" [class.jc-right]="applyClass()" (click)="closeModal($event)">
                 <button class="button btn-secondary" *ngIf="isSecondaryButtonVisible">
                     {{ secondaryButtonText }}
                 </button>
