--- a/src/app/modules/banking/components/transfer/transfer.component.html
+++ b/src/app/modules/banking/components/transfer/transfer.component.html
@@ -82,7 +82,7 @@
         </section>
 
         <section>
-            <div class="btn-container flex-right">
+            <div class="btn-container jc-right">
                 <button class="button btn-primary" type="submit">Transfer Now</button>
             </div>
         </section>
