--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,6 @@
 }
 .bt.banking {
   display: flex;
-  color: #616161;
   background: #EBEBEB;
 }
 .bt .banking-content-container {
@@ -278,44 +277,57 @@
   font-weight: 500;
 }
 .bt .login-container {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  height: 100vh;
-  overflow: hidden;
+  display: flex;
+  flex-direction: row;
 }
-.bt .login-container .login-image-container img {
-  width: 100%;
-  object-fit: cover;
-  height: 100vh;
-}
-.bt .login-container .login-form-wrapper {
-  display: grid;
-  grid-template-rows: 20% 60%;
-}
-.bt .login-container .login-form-wrapper .login-header {
+.bt .login-container .login-image-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(45deg, #348AA7, #62B4D0);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.75)), url(https://images.unsplash.com/photo-1535957998253-26ae1ef29506?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fG9mZmljZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+  background-size: cover;
+  height: 100vh;
+  flex: 1;
+}
+.bt .login-container .copy {
+  text-align: center;
+}
+.bt .login-container .banner {
   color: white;
 }
-.bt .login-container .form-container {
-  margin: 3em 15em;
+.bt .login-container h1 {
+  font-size: 2.5em;
+  margin: 0;
+  padding: 0;
 }
-.bt .login-container .form-container h2 {
-  padding-bottom: 24px;
-  margin-bottom: 24px;
-  text-align: center;
-  color: #616161;
+.bt .login-container .cta {
+  font-size: 1.2em;
+  margin-top: 12px;
+}
+.bt .login-container .login-cta {
+  margin-bottom: 3em;
+}
+.bt .login-container .login-form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+.bt .login-container .form-container {
+  margin: 3em 0;
 }
 .bt .login-container .form-group-vertical {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 3em;
 }
 .bt .login-container label {
-  color: #616161;
   margin-bottom: 6px;
+}
+.bt .login-container .btn-login {
+  width: 100%;
+  margin: 0;
 }
 .bt .bt-mobile {
   display: none;
@@ -597,15 +609,16 @@
   border-color: #348AA7 #25D9E6 #25D9E6;
 }
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 899px) {
   .bt.banking {
     flex-direction: column;
   }
   .bt .login-container {
-    grid-template-columns: 1fr;
+    flex-direction: column;
   }
   .bt .login-image-container {
-    display: none;
+    height: 180px;
+    padding: 1.5em;
   }
   .bt .login-container .form-container {
     margin: 3em 5em;
@@ -736,7 +749,7 @@
     padding: 6px 0;
   }
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 900px) and (max-width: 1024px) {
   .bt .login-container .form-container {
     margin: 3em 5em;
   }
@@ -753,7 +766,7 @@
     flex-direction: column;
   }
   .bt .side-nav-mobile {
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: center;
   }
@@ -955,6 +968,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Rubik", sans-serif;
+  color: #616161;
   font-size: 16px;
   letter-spacing: 0.5px;
   font-weight: 400;
