--- a/src/styles/_banking.scss
+++ b/src/styles/_banking.scss
@@ -15,7 +15,6 @@ $error-clr          : #DB3939;
   /*Common*/
   &.banking {
 	display    : flex;
-	color      : $font-color;
 	background : #EBEBEB;
   }
 
@@ -284,52 +283,67 @@ $error-clr          : #DB3939;
 
   /*****LOGIN START*****/
   .login-container {
-	display               : grid;
-	grid-template-columns : 40% 60%;
-	height                : 100vh;
-	overflow              : hidden;
+	display        : flex;
+	flex-direction : row;
 
 	.login-image-container {
-	  img {
-		width      : 100%;
-		object-fit : cover;
-		height     : 100vh;
-	  }
+	  display           : flex;
+	  justify-content   : center;
+	  align-items       : center;
+	  background        : linear-gradient(rgb(0 0 0 / 50%), rgb(0 0 0 / 75%)), url(https://images.unsplash.com/photo-1535957998253-26ae1ef29506?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fG9mZmljZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
+	  background-size   : cover;
+	  height: 100vh;
+	  flex: 1;
 	}
 
-	.login-form-wrapper {
-	  display            : grid;
-	  grid-template-rows : 20% 60%;
+	.copy {
+	  text-align : center;
+	}
 
-	  .login-header {
-		display         : flex;
-		justify-content : center;
-		align-items     : center;
-		background      : $background-clr;
-		color           : white;
-	  }
+	.banner {
+	  color : white;
+	}
+
+	h1 {
+	  font-size : 2.5em;
+	  margin    : 0;
+	  padding   : 0;
+	}
+
+	.cta {
+	  font-size  : 1.2em;
+	  margin-top : 12px;
+	}
+
+	.login-cta {
+	  margin-bottom : 3em;
+	}
+
+	.login-form-container {
+	  display         : flex;
+	  flex-direction  : column;
+	  justify-content : center;
+	  align-items     : center;
+	  flex: 1;
 	}
 
 	.form-container {
-	  margin : 3em 15em;
-
-	  h2 {
-		padding-bottom : 24px;
-		margin-bottom  : 24px;
-		text-align     : center;
-		color          : $font-color;
-	  }
+	  margin : 3em 0;
 	}
 
 	.form-group-vertical {
-	  display            : grid;
-	  grid-template-rows : 1fr 1fr;
-	  margin-bottom      : 3em;
+	  display        : flex;
+	  flex-direction : column;
+	  margin-bottom  : 3em;
 	}
 
 	label {
-	  color         : $font-color;
 	  margin-bottom : 6px;
+	}
+
+	.btn-login {
+	  width: 100%;
+	  margin: 0;
 	}
 
   }
