--- a/src/app/modules/banking/components/delete-payee/delete-payee.component.html
+++ b/src/app/modules/banking/components/delete-payee/delete-payee.component.html
@@ -1,4 +1,4 @@
-<app-alerts *ngIf="successMessage" [message]="message"></app-alerts>
+<app-alerts [alertDetails]="deletePayeeAlert"></app-alerts>
 <h3 class="bt_section_header">Delete Payee</h3>
 <table>
     <thead>
@@ -15,7 +15,7 @@
         <td>{{ payee.accountNumber }}</td>
         <td>{{ payee.bank }}</td>
         <td>
-            <a (click)="openModal($event, payee.accountNumber)" href="">
+            <a (click)="openModal($event, payee.id)" href="">
                 <app-svg-icon [svgIconId]="'trash'"></app-svg-icon>
             </a>
         </td>
@@ -24,7 +24,7 @@
 </table>
 
 <!--Confirmation Modal-->
-<app-modal (submittedValue)="closeModal($event)"
+<app-modal (submittedValue)="deletePayee($event)"
            [isPrimaryButtonVisible]="true"
            [isSecondaryButtonVisible]="true"
            [modalHeader]="header"
